fix: Set card overflow to hidden

--- a/src/styles/card.css
+++ b/src/styles/card.css
@@ -2,5 +2,7 @@
     @apply rounded-md
         bg-white
         drop-shadow-md
-        break-inside-avoid block;
+        break-inside-avoid 
+        block 
+        overflow-hidden;
 }
